2002-11-01  David Carlton  <carlton@math.stanford.edu>

	* linespec.c (dl1_set_flags): Change arguments.
	(dl1_compound): Rename from dl1_multipart_compound, and shuffle
	components.
	(dl1_examine_compound_token): Change call structure.
	(dl1_find_method): Ditto.
	(dl1_handle_filename): Ditto.
	(dl1_is_all_digits): New function.
	(dl1_all_digits): Ditto.
	(dl1_skip_digits): Ditto.
	(dl1_dollar): Ditto.
	(dl1_variable): Ditto.
	(dl1_symbol_found): Ditto.
	(dl1_minsym_found): Ditto.
	(decode_line_1): Slim down dramatically.

2002-10-31  David Carlton  <carlton@math.stanford.edu>

	* linespec.c (dl1_handle_multipart): New function.
	(dl1_multipart_compound): Ditto.
	(dl1_examine_compound_token): Ditto.
	(dl1_locate_class_sym): Ditto.
	(dl1_find_next_token): Ditto.
	(dl1_find_method): Ditto.
	(dl1_count_methods): Ditto.
	(dl1_handle_filename): Ditto.
	(decode_line_1): Call dl1_handle_multipart.
	(cplusplus_error): Declare to be NORETURN.

2002-10-28  David Carlton  <carlton@math.stanford.edu>

	* linespec.c (dl1_initialize_defaults): New function.
	(dl1_indirect): Ditto.
	(dl1_set_flags): Ditto.
	(dl1_locate_first_half): Ditto.
	(decode_line_1): Call the above functions.
	* symtab.c (lookup_symbol_aux_minsyms): Add block_index argument,
	and delete is_a_field_of_this argument.
	(lookup_symbol_aux_nonlocal): Add call to
	lookup_symbol_aux_minsyms, and expand HP comment.
	(lookup_symbol_aux): Delete calls to lookup_symbol_aux_minsyms.
	Expand on comment before lookup_transparent_type.

2002-10-25  David Carlton  <carlton@math.stanford.edu>

	* ada-lang.c (standard_lookup): Set last argument to lookup_symbol
	to NULL.
	* p-valprint.c (pascal_val_print): Ditto.
	* objc-lang.c (find_imps): Ditto.
	* c-valprint.c (c_val_print): Ditto.

2002-10-25  David Carlton  <carlton@math.stanford.edu>

	* symtab.c (lookup_symbol_aux_block): New function.
	(lookup_symbol_aux_local): Call lookup_symbol_aux_block.
	(lookup_symbol_aux): Ditto.
