@@ -1,3 +1,14 @@
+2002-11-04  David Carlton  <carlton@math.stanford.edu>
+
+	* linespec.c (initialize_defaults): Rename from
+	dl1_initialize_defaults.
+	(set_flags): Rename from dl1_set_flags.
+	(decode_line_1): Set flags before decoding indirect.
+	(decode_indirect): Rename from dl1_indirect.
+	(set_flags): Miscellaneous cleanup.
+	(decode_indirect): Miscellaneous cleanup.
+	Move around some functions and declarations.
+
 2002-11-01  David Carlton  <carlton@math.stanford.edu>
 
 	* linespec.c (dl1_set_flags): Change arguments.
